made the results table sortable

--- a/modules/dmBotAdmin/config/view.yml
+++ b/modules/dmBotAdmin/config/view.yml
@@ -2,4 +2,4 @@ indexSuccess:
 
   stylesheets:  [ admin.dataTable, dmBotPlugin.style ]
 
-  javascripts:  [ dmBotPlugin.ctrl ]
+  javascripts:  [ lib.dataTable, dmBotPlugin.ctrl ]
